compiler/testData/diagnostics/tests/modifiers/const/arrayInAnnotationArgumentType.fir.kt
annotation class A(konst a: IntArray = <!TYPE_MISMATCH!>arrayOf(1)<!>)
annotation class B(konst a: IntArray = intArrayOf(1))
